--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "log4js": "^0.6.27",
+    "marked": "^0.3.5",
     "mongoose": "^4.2.5",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
